OO-5122: remove u0009 control characters from queries, text...